# dingo

./: ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  dingo-converter.cc  dingo-dbmanager.cc~  dingo-dbmanager.h~  dingo-dbmanobserver.cc  dingo-model.sql~  dingo-sqlite3.cc  dingo-sqlite3.h  dingo-tagreader.cc  dingo-tagreader.h  dingo.db  dingo.mwb  valgrind-log.txt
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
data/: Makefile  Makefile.am  Makefile.in
data/database/: Makefile  Makefile.am  Makefile.in  dingo.db  dingo.mwb  dingo.mwb.bak  dingo.sql
data/icons/: Makefile  Makefile.am  Makefile.in
data/icons/128x128/: Makefile  Makefile.am  Makefile.in
data/icons/16x16/: Makefile  Makefile.am  Makefile.in
data/icons/24x24/: Makefile  Makefile.am  Makefile.in
data/icons/256x256/: Makefile  Makefile.am  Makefile.in
data/icons/32x32/: Makefile  Makefile.am  Makefile.in
data/icons/48x48/: Makefile  Makefile.am  Makefile.in
data/icons/64x64/: Makefile  Makefile.am  Makefile.in
data/icons/scalable/: Makefile  Makefile.am  Makefile.in
data/integration/: Makefile  Makefile.am  Makefile.in  dingo.desktop  dingo.desktop.fix.fc17.icon.in.in  dingo.desktop.in  dingo.desktop.in.in
data/samples/: Makefile  Makefile.am  Makefile.in  MediaInfoParameters.txt  sample-playlist.dpls  sample-settings.dgs
data/settings/: Makefile  Makefile.am  Makefile.in  dingo-default.dgs
dingo-new/: dingo-dbmanobserver.h  dingo-new.db  dingo-new.mwb  dingo-new.sql
docs/: Makefile  Makefile.in
po/: .intltool-merge-cache  LINGUAS  Makefile  Makefile.am  Makefile.in  POTFILES  POTFILES.in  POTFILES.skip  en.gmo  en.po  vi.gmo  vi.po
src/: Makefile  Makefile.am  Makefile.in  dingo-aboutdialog.cc  dingo-aboutdialog.h  dingo-albumtreeview.cc  dingo-albumtreeview.h  dingo-albumtreeviewobserver.cc  dingo-albumtreeviewobserver.h  dingo-application.cc  dingo-application.h  dingo-artisttreeview.cc  dingo-artisttreeview.h  dingo-artisttreeviewobserver.cc  dingo-artisttreeviewobserver.h  dingo-audiovideofilterobserver.cc  dingo-audiovideofilterobserver.h  dingo-controlbar.cc  dingo-controlbar.h  dingo-converter.h  dingo-dbmanager.cc  dingo-dbmanager.h  dingo-dbmanagertest.cc  dingo-dbmanagertest.h  dingo-dbmanalbumobserver.cc  dingo-dbmanalbumobserver.h  dingo-dbmanartistobserver.cc  dingo-dbmanartistobserver.h  dingo-dbmangenreobserver.cc  dingo-dbmangenreobserver.h  dingo-dbmanplaylistobserver.cc  dingo-dbmanplaylistobserver.h  dingo-dbmantrackobserver.cc  dingo-dbmantrackobserver.h  dingo-dbmanyearobserver.cc  dingo-dbmanyearobserver.h  dingo-enginenavigationobserver.cc  dingo-enginenavigationobserver.h  dingo-enginestatusobserver.cc  dingo-enginestatusobserver.h  (+94 more)
src/.deps/: dingo-aboutdialog.Po  dingo-albumtreeview.Po  dingo-albumtreeviewobserver.Po  dingo-application.Po  dingo-artisttreeview.Po  dingo-artisttreeviewobserver.Po  dingo-audiovideofilterobserver.Po  dingo-controlbar.Po  dingo-dbmanager.Po  dingo-dbmanalbumobserver.Po  dingo-dbmanartistobserver.Po  dingo-dbmangenreobserver.Po  dingo-dbmanplaylistobserver.Po  dingo-dbmantrackobserver.Po  dingo-dbmanyearobserver.Po  dingo-enginenavigationobserver.Po  dingo-enginestatusobserver.Po  dingo-fullscreenobserver.Po  dingo-genretreeview.Po  dingo-genretreeviewobserver.Po  dingo-hscale.Po  dingo-mainwindow.Po  dingo-menubar.Po  dingo-mousemotionobserver.Po  dingo-mpriscommon.Po  dingo-mprisv2.Po  dingo-multipletracksinfowindow.Po  dingo-notification.Po  dingo-playerengine.Po  dingo-playlistreader.Po  dingo-playlisttreeview.Po  dingo-playlisttreeviewobserver.Po  dingo-playlistwriter.Po  dingo-playorderobserver.Po  dingo-processgrid.Po  dingo-processgridobserver.Po  dingo-programoptions.Po  dingo-repeatmodeobserver.Po  dingo-repeattoggleobserver.Po  dingo-searchentryobserver.Po  (+21 more)
