themedir = $(datadir)/dingo/icons
size = 16x16

iconsdir = $(themedir)/$(size)

icons_DATA = dingo-album.png \
             dingo-artist.png \
             dingo-genre.png \
             dingo.png \
             dingo-pausing.png \
             dingo-playing.png \
             dingo-playlist.png \
             dingo-trackstatus.png \
             dingo-year.png

desktopiconsdir = /usr/share/icons/hicolor/$(size)/apps

desktopicons_DATA = dingo.png

EXTRA_DIST = $(icons_DATA)
