themedir = $(datadir)/dingo/icons
size = 24x24

iconsdir = $(themedir)/$(size)

icons_DATA = dingo-controlbar-repeat.png \
             dingo-controlbar-repeat-single.png \
             dingo-controlbar-shuffle.png \
             dingo.png

desktopiconsdir = /usr/share/icons/hicolor/$(size)/apps

desktopicons_DATA = dingo.png

EXTRA_DIST = $(icons_DATA)
