themedir = $(datadir)/dingo/icons
size = 48x48

iconsdir = $(themedir)/$(size)

icons_DATA = dingo-toolbar-audio-filter.png \
             dingo-toolbar-video-filter.png \
             dingo-toolbar-now-playing.png \
             dingo-toolbar-play-queue.png \
             dingo.png

desktopiconsdir = /usr/share/icons/hicolor/$(size)/apps

desktopicons_DATA = dingo.png

EXTRA_DIST = $(icons_DATA)
