themedir = $(datadir)/dingo/icons
size = scalable

iconsdir = $(themedir)/$(size)

icons_DATA = dingo-now-playing.png \
             dingo-repeat.png \
             dingo-playlist-scalable.svg \
             dingo-playlist-new-scalable.svg \
             dingo-repeat-single-one.png

EXTRA_DIST = $(icons_DATA)
